<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.screens.ThirdOnboarding">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="430dp"
        android:layout_height="477dp"
        android:layout_marginBottom="348dp"
        android:src="@drawable/onb3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="344dp"
        android:fontFamily="@font/geometric"
        android:gravity="center"
        android:text="@string/onboarding_title_3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="89dp"
        android:layout_height="15dp"
        android:layout_marginBottom="324dp"
        android:src="@drawable/vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="362dp"
        android:layout_height="89dp"
        android:layout_marginBottom="180dp"
        android:fontFamily="@font/fonttwo"
        android:gravity="center"
        android:text="@string/onboarding_desc_3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/getstarted"
        android:layout_width="353dp"
        android:layout_height="68dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/JauneTaxi"
        android:fontFamily="@font/geometric"
        android:text="@string/start_now_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>